Fixed logo/text align with about me, in style.css

--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ aside {
 /* ----- About me ----- */
 article {
   background-color:white;
-  padding:50px;
+  padding:50px 35px ;
   color:#888;
   width:550px;
   float:left;
@@ -94,7 +94,7 @@ footer {
   font-size: 24px;
   font-weight: bold;
   float:left;
-  padding: 20px 10px 24px 14px;
+  padding: 20px 28px 24px 30px;
   background-color: #4aaaa5;
   color:#FFF;
   margin:0px 425px 0 0;
